	Fixed bug where a beta version of Chrome wouldn't handle drag/drop correctly because of missing drag effect.
	Fixed so the HTML 4 runtime displays N/A for file sizes and the progress is based on uploaded files instead of bytes.
	Fixed so chunking can be disabled properly in Flash but that will affect the progress bar.
	Fixed small files are uploaded as one single chunk and not forced into 4 chunks in the Flash runtime.
Version 1.2 (2010-03-09)
	Added new rename file support for jQuery queue widget, click on a file name to rename it if it's enabled.
	Added official ChunkUploaded event, it similar to FileUploaded but executed for each chunk.
	Added bytes per second support to total queue progress.
	Added better error handling to core API using the new Error event.
	Added better error handling to jQuery queue widget.
	Fixed so chunking uploads is dispatch from JS not from inside Flash/Silverlight.
Version 1.1.1 (2010-02-25)
	Added new setup setting to queue widget. Makes it easier to bind custom events to uploader instance.
	Fixed so it's possible to disable chunking compleatly. It's now disabled by default.
	Fixed bug where multipart mode was enabled all the time in the Flash runtime.
	Fixed bug where chunked uploading in Silverlight would fail.
	Fixed bug where the delete button was visible while uploading.
	Fixed bug where unique_names setting wasn't working when the core API was used.
	Fixed bug where the queue widget wouldn't display the currently uploaded file if the unique_names was enabled.
Version 1.1 (2010-02-24)
	Added new multipart and multipart_params support.
	Added new container option, enables you to specify where flash/silverlight objects would be added.
	Added chunking support to BrowserPlus runtime, contributed by Steve Spencer.
	Added FileUploaded event that fires when a file is uploaded.
	Added more easily understandable buttons to queue widget.
	Added html4 runtime, contributed by Ryan Demmer.